--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,43 @@
-django~=3.2.5
-django-ckeditor
-django-cors-headers
-django-easy-select2
-django-extensions
-django-jazzmin
-django-js-asset
-django-ninja
-django-silk
-pillow
-typing-extensions
-pydantic[email]~=1.8.2
-pretty-errors
-python-jose
-
-cryptography~=3.4.7
-twilio~=6.62.1
+asgiref==3.4.1
+autopep8==1.5.7
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.3
+colorama==0.4.4
+cryptography==3.4.7
+Django==3.2.5
+django-ckeditor==6.1.0
+django-cors-headers==3.7.0
+django-easy-select2==1.5.7
+django-extensions==3.1.3
+django-jazzmin==2.4.7
+django-js-asset==1.2.2
+django-ninja==0.13.2
+django-ratelimit==3.0.1
+django-silk==4.1.0
+dnspython==2.1.0
+ecdsa==0.17.0
+email-validator==1.1.3
+gprof2dot==2021.2.21
+idna==3.2
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+Pillow==8.3.1
+pretty-errors==1.2.23
+pyasn1==0.4.8
+pycodestyle==2.7.0
+pycparser==2.20
+pydantic==1.8.2
+Pygments==2.9.0
+PyJWT==1.7.1
+python-dateutil==2.8.2
+python-jose==3.3.0
+pytz==2021.1
+requests==2.26.0
+rsa==4.7.2
+six==1.16.0
+sqlparse==0.4.1
+toml==0.10.2
+twilio==6.62.1
+typing-extensions==3.10.0.0
+urllib3==1.26.6
