--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,20 @@ asgiref==3.4.1
 autopep8==1.5.7
 certifi==2021.5.30
 cffi==1.14.6
-charset-normalizer==2.0.3
+charset-normalizer==2.0.4
 colorama==0.4.4
-cryptography==3.4.7
-Django==3.2.5
+cryptography==3.4.8
+Django==3.2.6
 django-ckeditor==6.1.0
-django-cors-headers==3.7.0
+django-cors-headers==3.8.0
 django-easy-select2==1.5.7
 django-extensions==3.1.3
-django-jazzmin==2.4.7
+django-jazzmin==2.4.8
 django-js-asset==1.2.2
-django-ninja==0.13.2
+django-ninja==0.14.0
 django-ratelimit==3.0.1
 django-silk==4.1.0
+djangorestframework==3.12.4
 dnspython==2.1.0
 ecdsa==0.17.0
 email-validator==1.1.3
@@ -23,12 +24,12 @@ idna==3.2
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 Pillow==8.3.1
-pretty-errors==1.2.23
+pretty-errors==1.2.24
 pyasn1==0.4.8
 pycodestyle==2.7.0
 pycparser==2.20
 pydantic==1.8.2
-Pygments==2.9.0
+Pygments==2.10.0
 PyJWT==1.7.1
 python-dateutil==2.8.2
 python-jose==3.3.0
@@ -38,8 +39,6 @@ rsa==4.7.2
 six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
-twilio==6.62.1
-typing-extensions==3.10.0.0
+twilio==6.63.1
+typing-extensions==3.10.0.2
 urllib3==1.26.6
-
-djangorestframework~=3.12.4
