--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ django-jazzmin==2.4.8
 django-js-asset==1.2.2
 django-ninja==0.14.0
 django-ratelimit==3.0.1
-django-silk==4.1.0
+django-silk @ git+https://github.com/jazzband/django-silk@21a4058c2a758fac687f837cb523175c64c567c3
 djangorestframework==3.12.4
 dnspython==2.1.0
 ecdsa==0.17.0
@@ -26,6 +26,7 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 Pillow==8.3.1
 pretty-errors==1.2.24
+psycopg2-binary==2.9.1
 pyasn1==0.4.8
 pycodestyle==2.7.0
 pycparser==2.20
